--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
   },
-  "nodemonConfig":{
-    "ignore":["dados/*json"]
+  "nodemonConfig": {
+    "ignore": [
+      "dados/*json"
+    ]
   },
   "author": "Aislan Almeida",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.7.1",
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "nodemon": "^2.0.7"
